testdata/failing/multi-eos.trunnel
struct multi_eos {
  u8 x;
  eos;
  eos;
};
